--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <body style="background-color:MediumSeaGreen;">
-
+<img src="https://assets.vogue.com/photos/5d2f42b7f1478f0008831821/master/w_2560%2Cc_limit/00-story-image-amalfi-coast-italy-travel-guide.jpg" alt="amalficoast">
 
 <h1>Bella</h1>
 <p>This is my first website.</p>
