--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
 <h1 style="text-align:center;">Bella</h1>
 <style>
+
+table, th, td {
+  border: 1px solid white; border-collapse: collapse;}
+
+  th, td {
+  background-color: #06816B;
+}
+
 body {background-color: green;}
 h1   {color: purple;}
 p    {color: pink;}
@@ -23,6 +31,29 @@ p    {color: pink;}
 </style>
 <iframe width="853" height="480" src="https://www.youtube.com/embed/0xFiOU5J7J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <a href="https://www.vogue.com/?us_site"=y>click here!</a>
+
+<table style="width:100%"> 
+  <tr>
+    <th>class</th>
+    <th>teacher</th>
+    <th>description</th>
+  </tr>
+  <tr>
+    <td>english 2 </td>
+    <td>Mr john</td>
+    <td>fun class </td>
+  </tr>
+  <tr>
+    <td>AP enviormental science </td>
+    <td>Ms erin</td>
+     <td>interesting class </td>
+   </tr>
+  <tr>
+    <td>art</td>
+    <td>Ms maria</td>
+    <td>extraordinary</td>
+  </tr>
+</table>
 
 </body>
 </html>
