--- a/index.html
+++ b/index.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-</head>
-<body>
-<body style="background-color:MediumSeaGreen;">
-
-<img src="https://assets.vogue.com/photos/5d2f42b7f1478f0008831821/master/w_2560%2Cc_limit/00-story-image-amalfi-coast-italy-travel-guide.jpg" alt="amalfi coast" width="700" height="600">
-
-<h1 style="text-align:center;">Bella</h1>
-<style>
-
-table, th, td {
+  <style>
+    table, th, td {
   border: 1px solid white; border-collapse: collapse;}
 
   th, td {
   background-color: #06816B;
 }
 
-body {background-color: green;}
+body {background-color:MediumSeaGreen;}
 h1   {color: purple;}
 p    {color: pink;}
 </style>
+    
+    
+<title>Page Title</title>
+</head>
+  
+<body>
+<img src="https://assets.vogue.com/photos/5d2f42b7f1478f0008831821/master/w_2560%2Cc_limit/00-story-image-amalfi-coast-italy-travel-guide.jpg" alt="amalfi coast" width="700" height="600">
+<h1 style="text-align:center;">Bella</h1>
 
 <p style="text-align:center;">This is my first website.</p>
-<style>
-body {background-color: green;}
-h1   {color: purple;}
-p    {color: pink;}
-</style>
+
 <iframe width="853" height="480" src="https://www.youtube.com/embed/0xFiOU5J7J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <a href="https://www.vogue.com/?us_site"=y>click here!</a>
 
