--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ p    {color: pink;}
 </head>
   
 <body>
+  <img src="images/1.jpg">
 <img src="https://assets.vogue.com/photos/5d2f42b7f1478f0008831821/master/w_2560%2Cc_limit/00-story-image-amalfi-coast-italy-travel-guide.jpg" alt="amalfi coast" width="700" height="600">
 <h1 style="text-align:center;">Bella</h1>
 
@@ -49,8 +50,8 @@ p    {color: pink;}
     <td>extraordinary</td>
   </tr>
 </table>
-<img scr="images/1.jpg">
+
   
-  <img scr="images/2.jpg">
+  <img src="images/2.jpg">
 </body>
 </html>
