--- a/index.html
+++ b/index.html
@@ -54,5 +54,7 @@ p    {color: pink;}
   
   <img src="images/2.jpg">
    <img src="images/3.jpg">
+  <a href="template/Bella.txt">File</a>  
+  
 </body>
 </html>
