--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ p    {color: pink;}
     <td>extraordinary</td>
   </tr>
 </table>
-<a href="sales.htm"> click here!!</a>
+<a href="sales.html"> click here!!</a>
   
   <img src="images/2.jpg">
    <img src="images/3.jpg">
