--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,10 @@
 
 <h1>sales</h1>
 <p>coming soon.</p>
-
+  <img scr="https://cdn3.vectorstock.com/i/1000x1000/87/37/home-icon-logo-design-simple-house-logo-icon-vector-36658737.jpg" alt="girl in a jacket" style="width:500px;height:600px;">
+                                                                                                                                
+ <a href="index.html">  <img scr="https://cdn3.vectorstock.com/i/1000x1000/87/37/home-icon-logo-design-simple-house-logo-icon-vector-36658737.jpg" alt="girl in a jacket" style="width:500px;height:600px;">
+ </a>    
+                     
 </body>
 </html>
-<a href="index.html"> home </a>
